examples/otel-demo/ingress/ingress-opensearch.yaml
# Copyright (c) 2026 The Jaeger Authors.
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-demo-ingress
  namespace: opensearch
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: opensearch.demo.jaegertracing.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards
                port:
                  number: 5601
  tls:
    - hosts:
        - opensearch.demo.jaegertracing.io
      secretName: opensearch-demo-tls
